@@ -21,6 +21,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #23792: Ignore KeyboardInterrupt when the pydoc pager is active.
+  This mimics the behavior of the standard unix pagers, and prevents
+  pipepager from shutting down while the pager itself is still running.
+
 - Issue #23742: ntpath.expandvars() no longer loses unbalanced single quotes.
 
 - Issue #21802: The reader in BufferedRWPair now is closed even when closing
